[package]
name = "protohackers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.21", features = ["derive"] }
crossbeam = "0.8.2"
env_logger = "0.9.0"
json = "0.12.4"
log = "0.4.17"
primal = "0.3.1"
thiserror = "1.0.35"
threadpool = "1.8.1"

[dev-dependencies]
global_counter = "0.2.2"
